--- a/challenge/index.html
+++ b/challenge/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg fixed-top text-uppercase">
+    <nav class="navbar navbar-expand-lg text-uppercase">
         <div class="container-fluid">
           <a class="navbar-brand font-weight-bold" href="#">Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,20 @@
     <!-- main section start -->
     
 
-    
+    <section class="main py-5">
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-lg-6 py-5 mr-auto">
+                    <h3><small>Hi, I'm</small> <br>
+                        Khoubaib
+                    </h3>
+                    <h6 class="pt-3">Front-End Web Developer</h6>
+                    <input type="button" value="My Work" class="bt1 mt-5 mr-3">
+                </div>
+            </div>
+        </div>
+    </section>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
