added about me, img ,css

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -43,6 +43,24 @@
         </div>
     </section>
 
+
+    <section class="about py-5">
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-lg-5 py-5">
+                    <img src="./assets/images/morgan.jpg" class="img-fluid" alt="#">
+                </div>
+                <h1>About Me.</h1>
+                <p>Front-End Web Dev</p>
+                <p class="py-3">I am <span class="font-weight-bold">Khoubaib Majouli</span> ipsum dolor sit amet consectetur adipisicing elit. Nulla cupiditate deserunt quasi consectetur ipsa facilis nam libero, nostrum deleniti inventore fugiat velit, suscipit quos dolorem obcaecati animi dolore earum alias.</p>
+
+                <input type="button" class="btn1 mt-3" value="Download C.V">
+                <input type="button" class="btn2 mt-3" value="Contact Me">
+
+            </div>
+        </div>
+    </section>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
