--- a/challenge/index.html
+++ b/challenge/index.html
@@ -61,6 +61,27 @@
         </div>
     </section>
 
+    <section class="projects py-5 bg-light">
+        <div class="conatiner py-5">
+            <h1 class="text-center pb-5">My Projects</h1>
+            <div class="row pb-3">
+                <div class="col-lg-4 mb-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <div class="circle">
+                                <span><i class="fas fa-desktop"></i></span>
+                            </div>
+                            <h4 class="font-weight-bold pb-2">Project X</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptatum quod qui numquam. Eius perspiciatis ipsa sed vitae aut ipsam praesentium nostrum ea quod exercitationem, sequi obcaecati! Voluptates, blanditiis magnam!</p>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
